# path-finding-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: framework_demo.ipynb  graph_strategies.py
src/: __init__.py
src/core/: __init__.py  search_engine.py  types.py
src/data_structures/: __init__.py  fifo_queue.py  lifo_stack.py  priority_queue.py
src/strategies/: __init__.py
src/strategies/informed/: __init__.py  astar.py  greedy.py
src/strategies/uninformed/: __init__.py  bfs.py  dfs.py  ucs.py
