[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinding-framework"
version = "1.0.0"
description = "A modular, problem-agnostic Python framework for search algorithms demonstrating Dependency Injection and IoC"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andrea Di Felice"}
]
keywords = [
    "pathfinding",
    "search-algorithms",
    "artificial-intelligence",
    "dependency-injection",
    "design-patterns",
    "a-star",
    "dijkstra",
    "bfs",
    "dfs",
    "graph-search"
]

requires-python = ">=3.8"

# Core dependencies (none - uses only Python standard library)
dependencies = []

[project.optional-dependencies]
# Dependencies for running the benchmark example
benchmark = [
    "numpy>=1.24.0",
    "networkx>=3.1"
]

[project.urls]
Homepage = "https://github.com/andrea-00/pathfinding-framework"
Repository = "https://github.com/andrea-00/pathfinding-framework"

